crates/otter-runtime/tests/compile_fail/worker_message_gc_handle_rejected.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/worker_message_gc_handle_rejected.rs:6:28
  |
6 |     worker.accepts_message(&handle);
  |            --------------- ^^^^^^^ expected `&StructuredCloneValue`, found `&Gc<()>`
  |            |
  |            arguments to this method are incorrect
  |
  = note: expected reference `&StructuredCloneValue`
             found reference `&Gc<()>`
note: method defined here
 --> src/worker.rs
  |
  |     pub fn accepts_message(&self, _message: &StructuredCloneValue) -> bool {
  |            ^^^^^^^^^^^^^^^
